Added authentication to POST, PUT, and DELETE
