# project-02/routes/recipes.js
@@ -2,6 +2,7 @@ const express = require('express');
 const cors = require('cors');
 const router = express.Router();
 const validation = require('../helpers/validation');
+const {requiresAuth} = require('express-openid-connect');
 
 const recipesController = require('../controllers/recipes');
 
@@ -11,10 +12,10 @@ router.get('/', recipesController.getAll);
 
 router.get('/:id', recipesController.getSingle);
 
-router.post('/', validation.saveRecipe, recipesController.addRecipe);
+router.post('/', validation.saveRecipe, requiresAuth(), recipesController.addRecipe);
 
-router.put('/:id', validation.saveRecipe, recipesController.updateRecipe);
+router.put('/:id', validation.saveRecipe, requiresAuth(), recipesController.updateRecipe);
 
-router.delete('/:id', recipesController.deleteRecipe);
+router.delete('/:id', requiresAuth(), recipesController.deleteRecipe);
 
 module.exports = router;
