# project-02/routes/shopping-list.js
@@ -2,6 +2,7 @@ const express = require('express');
 const cors = require('cors');
 const router = express.Router();
 const validation = require('../helpers/validation');
+const {requiresAuth} = require('express-openid-connect')
 
 const shoppingListController = require('../controllers/shopping-list')
 
@@ -11,10 +12,10 @@ router.get('/', shoppingListController.getAll)
 
 router.get('/:id', shoppingListController.getSingle)
 
-router.post('/', validation.saveListItem, shoppingListController.addItem)
+router.post('/', validation.saveListItem, requiresAuth(), shoppingListController.addItem)
 
-router.put('/:id', validation.saveListItem, shoppingListController.updateItem)
+router.put('/:id', validation.saveListItem, requiresAuth(), shoppingListController.updateItem)
 
-router.delete('/:id', shoppingListController.deleteItem)
+router.delete('/:id', requiresAuth(), shoppingListController.deleteItem)
 
 module.exports = router;
